# meson-static-library-debug

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  meson.build
cmake/cross/: toolchain_stm32f407xx.cmake
cmake/jlink/: find_jlink.cmake  flash.jlink  flash.jlink.in  reset.jlink
meson/cross/: STM32F750xx.txt
meson/jlink/: load_firmware.jlink.in
src/: CMakeLists.txt  meson.build
src/app/: CMakeLists.txt  main.c  meson.build
src/hal/: CMakeLists.txt  cubemx_main.c  cubemx_main.h  meson.build  startup_stm32f750xx.s  stm32f7xx_hal_conf.h  stm32f7xx_hal_msp.c  stm32f7xx_it.c
